# NCS_examples

./: .gitignore  README.md
bluetooth/custom_ncs_ble_service/: README.md  prj.conf
bluetooth/peripheral_uart_set_tx/: prj.conf
custom_shell/: CMakeLists.txt  README.md  prj.conf  sample.yaml
custom_shell/src/: main.c
devicetree/devicetree_custom_device/: CMakeLists.txt  README.md  app.overlay
devicetree/devicetree_custom_device/src/: main.c
devicetree/gpio_device/: README.md
lib/: zigbee_cli_cmd_custom.c
matter/light_bulb_ble_uart/: CMakeLists.txt  Kconfig  README.md  overlay-multiprotocol_ble.conf  prj_no_dfu.conf
my_apps/gpio_device/: CMakeLists.txt  README.md  prj.conf
my_apps/multi_sensor/: prj.conf
openthread/commissioner/: README.md  prj.conf  sample.yaml
openthread/joiner/: README.md  prj.conf  sample.yaml
peripheral/gpio_device/: README.md  sample.yaml
peripheral/ppi_pwm_hands_on/: README.md  README.rst  prj.conf
peripherals/hello_world_usb/: CMakeLists.txt  README.md  prj.conf
peripherals/long_press_button/: CMakeLists.txt  README.md  prj.conf
wifi/provisioning_demo/: Kconfig  README.md  prj.conf
wifi/socket_echo_client/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
wifi/socket_echo_client/src/: main.c  network.c  network.h
wifi/twt_provisioning_demo/: CMakeLists.txt  Kconfig  README.md  prj.conf
zigbee/light_bulb_dongle/: CMakeLists.txt  README.md  sample.yaml
zigbee/multi_sensor/: CMakeLists.txt  README.md  prj.conf
zigbee/network_coordinator_dongle/: CMakeLists.txt  README.md  prj.conf  sample.yaml
(+59 files in other folders)
